# memento-radio

./: .dockerignore  .gitignore  CMakeLists.txt  CNAME  Dockerfile  README.md  docker-compose.yml  fly.toml  index.html  radio.cfg
cfg/: radio.cfg.example
libmemento/: CMakeLists.txt
libmemento/include/: config.h
libmemento/src/: api_process.c  audio_synthesis_process.c  broadcast_process.c  config.c  encoder_process.c  file_utils.c  messages.c  patch_chooser_process.c
libpatchwerk/include/: audio_synthesis_process.h  config.h  messages.h
libpatchwerk/src/: audio_synthesis_process.c  config.c
lua/: webserver.lua
main/: CMakeLists.txt
main/src/: main.c
patches/rumblesan/memento/: 3chord.pd  atmospherics.pd  coms.pd  conductor.pd  drone-synth-help.pd  drone-synth.pd  drones.pd  filter-fm-voice.pd  lfo.pd  local.pd  main.pd  morse-code.pd  muzac.pd  noise.pd  preset-saver.pd  pstretch-player.pd  sampleplayer.pd  simple-fm-voice.pd  slowed.pd  tuning-noise-help.pd  tuning-noise.pd  vox.pd
patches/rumblesan/memento/chord-drone-synth/: 0.txt  1.txt
patches/rumblesan/memento/drone-synth/: 0.txt  1.txt  2.txt
patches/rumblesan/memento/noise-presets/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
patches/rumblesan/memento/tuning-noise-presets/: 2.txt  3.txt  4.txt  5.txt
patches/rumblesan/memento/vox-tuning-noise-presets/: 1.txt  2.txt  3.txt  4.txt
patches/rumblesan/test/: main.pd
scripts/: memento.sh  sync.sh
site/: style.css
tests/: CMakeLists.txt
tests/src/: test-audio-synthesis.c  test-broadcaster.c  test-config.c  test-encoder.c  test-file-utils.c  test-messages.c
